# LolProfileFinder

./: Cargo.toml  Dioxus.toml  README.md
src/: app.rs  main.rs
src/models/: account.rs  mod.rs  rank.rs  region.rs
src/routes/: error.rs  mod.rs  profile.rs  search.rs
