[package]
name = "lol-profile-finder"
version = "0.1.0"
authors = ["Joupiter <51340164+Joupiter@users.noreply.github.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "desktop"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
